<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.phearme.comixkcd.viewmodels.AboutViewModel"/>
    </data>
    <ScrollView
        android:padding="16dp"
        android:id="@+id/scrollviewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/aboutIcon"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    android:src="@drawable/ic_xkcd_hatman_black"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/aboutIcon"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAppearance="@android:style/TextAppearance.Material.Large"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="version 1.0"
                        android:text="@{viewModel.versionName}"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developed_by"
                android:textAppearance="@android:style/TextAppearance.Material.Title" />
            <android.support.v7.widget.AppCompatTextView
                android:autoLink="email"
                android:text="@string/author_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <Button
                android:onClick="@{() -> viewModel.onCloseButtonClick()}"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:text="@string/close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</layout>
